fix resolution bug

--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -2180,6 +2180,11 @@ h3 {
 			border-right: 1px solid $border-bold-color;
 		}
 	}
+
+
+	.сhart_сontainer {
+		border: 1px solid $border-thin-color;
+	}
 }
 @media (max-width: 769px) { 
 	.ff_coin {
