fix iphone scroll

--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -459,6 +459,7 @@ h3 {
 						right: 0;
 						left: 0;
 						overflow-y: scroll;
+						-webkit-overflow-scrolling: touch;
 					}
 					&.fade_for_redirect {
 						opacity: 0;
