--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -451,6 +451,7 @@ h3 {
 					}
 					.ff_close_mobile {
 						display: none;
+						-webkit-appearance: none;
 					}
 					.ff_scroll_wrap {
 						position: absolute;
