--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -451,7 +451,6 @@ h3 {
 					}
 					.ff_close_mobile {
 						display: none;
-						-webkit-appearance: none;
 					}
 					.ff_scroll_wrap {
 						position: absolute;
@@ -507,14 +506,17 @@ h3 {
 						border: none;
 						.ff_close_mobile {
 							display: block;
+							padding: 0;
 							margin-top: 20px;
     						margin-right: 20px;
+							border-radius: 24px;
+							box-shadow: 0px 0px 48px #ccc;
+							background-color: $bg-main-color;
+							width: 48px;
+							height: 48px;
 							.svgDemoGraphic {
 							    width: 48px;
 							    height: 48px;
-							    border-radius: 24px;
-    							box-shadow: 0px 0px 48px #ccc;
-    							background-color: $bg-main-color;
 							}
 							&.expand {
 							}
