--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -574,18 +574,23 @@ h3 {
 		top: 0;
 		right: 0;
 		cursor: pointer;
+		padding: 0 24px;
+		height: 56px;
 		&:focus {
 			outline: none;
+		}
+		svg {
+			width: 36px;
+			width: 36px;
+		}
+		&:hover {
+			.stroked {
+				stroke: $link-color;
+			}
 		}
 	}
 	#close {
 		transition: all 0.2s ease-out;
-	}
-
-	#ff_close:hover {
-		#close {
-			fill: $link-color;
-		}
 	}
 
 	.ff_close_mobile {
@@ -601,6 +606,15 @@ h3 {
 	&.fade-enter, &.fade-leave-to {
 		transform: translateY(10px);
 		opacity: 0
+	}
+}
+
+@media (max-width: 769px) {
+	.ff_center_panel {
+		.ff_close {
+			padding: 0 12px;
+			height: 48px;
+		}
 	}
 }
 
@@ -1311,6 +1325,10 @@ h3 {
 		font-size: $label-size;
 		font-weight: bold;
 
+		&:hover {
+			box-shadow: 0 2px 8px 0 rgba(0,0,0,0.15);
+		}
+
 		&.active_type {
 			color: $link-color;
 		}
@@ -1357,7 +1375,8 @@ h3 {
 .ff_post_feed {
 	padding-bottom: 140px;
 	.ff_post {
-		padding-bottom: 40px;
+		padding-bottom: 0px;
+		margin-bottom: -1px;
 	}
 }
 .ff_post {
@@ -1382,7 +1401,6 @@ h3 {
 			width: 100%
 		}
 	}
-
 
 	.description {
 		@extend .content_width;
@@ -1435,7 +1453,7 @@ h3 {
 		flex-wrap: wrap;
 		justify-content:space-between;
 
-		.vote {
+		.button_class {
 			padding: 0 24px;
 			height: 41px;	
 			border: 1px solid $border-bold-color;
@@ -1447,64 +1465,11 @@ h3 {
 			display: flex;
 			justify-content:space-between;
 			font-weight: bold;
-
-			&:hover {
-				border: 1px solid $dark-primary-color;
-				background-color: lighten($dark-primary-color, 100%);
-				transition: border 0.2s ease-in-out;
-				z-index: 2;
-			}
-			&:focus {
-				outline: none;
-			}
-			.votes_count {
-				display: inline-flex;
-				line-height: 14px;
-
-			}
-
-			&.vote_up {
-				color: $up-value-color;
-				&:hover {
-					border: 1px solid $up-value-color;
-					background-color: lighten($up-value-color, 45%);
-					transition: background-color 0.2s ease-in-out;
-				}
-			}
-			&.vote_down {
-				color: $down-value-color;
-				position: relative;
-    			left: -1px;
-				&:hover {
-					border: 1px solid $down-value-color;
-					background-color: lighten($down-value-color, 25%);
-					transition: background-color 0.2s ease-in-out;
-				}
-			}
-			&.like {
-				color: $dark-primary-color;
-				&:hover {
-					.ic_like {
-						background-image: url('~assets/images/ic_like_hover.svg');
-					}
-				}
-			}
-			&.dislike {
-				color: $dark-primary-color;
-				position: relative;
-    			left: -1px;
-    			&:hover {
-					.ic_dislike {
-						background-image: url('~assets/images/ic_dislike_hover.svg');
-					}
-				}
-			}
 		}
 
 		.subscribe {
-			@extend .vote;
+			@extend .button_class;
 			border: none;
-			font-size: $label-size;
 			background-color: $up-value-color;
 			color: $bg-main-color;
 			text-transform: uppercase;
@@ -1521,8 +1486,7 @@ h3 {
 		}
 
 		.watch {
-			@extend .vote;
-			font-size: $label-size;
+			@extend .button_class;
 			text-transform: uppercase;
 			display: flex;
 			padding: 0;
@@ -1563,7 +1527,6 @@ h3 {
 			width: 0;
 			display: flex;
 			flex-grow: 1;
-
 		}
 
 		.tools_right {
@@ -1583,6 +1546,86 @@ h3 {
 			flex-grow: 1;
 			min-width: 200px;
 			text-align: right;
+		}
+	}
+
+	.sticky_block {
+		position: sticky;
+		top: -1px;
+		background-color: $bg-coin-color;
+		margin: 0;
+		border-bottom: 1px solid $border-bold-color;
+		border-top: 1px solid $border-bold-color;
+
+		.sticky_inner {
+			height: 56px;
+			margin-top: 0px;
+			margin-right: 84px;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			.vote {
+				padding: 0 24px;
+				border: 1px solid $border-bold-color;
+				background-color: $bg-main-color;
+				flex-shrink: 0;
+				flex-grow: 1;
+				cursor: pointer;
+				font-size: $label-size;
+				display: flex;
+				justify-content:space-between;
+				font-weight: bold;
+				margin: -1px  0 -1px -1px;
+
+				&:hover {
+					border: 1px solid $dark-primary-color;
+					background-color: #fff;
+					transition: border 0.2s ease-in-out;
+					z-index: 2;
+				}
+				&:focus {
+					outline: none;
+				}
+				.votes_count {
+					display: inline-flex;
+					line-height: 14px;
+
+				}
+
+				&.vote_up {
+					color: $up-value-color;
+					&:hover {
+						border: 1px solid $up-value-color;
+						background-color: lighten($up-value-color, 45%);
+						transition: background-color 0.2s ease-in-out;
+					}
+				}
+				&.vote_down {
+					color: $down-value-color;
+					&:hover {
+						border: 1px solid $down-value-color;
+						background-color: lighten($down-value-color, 25%);
+						transition: background-color 0.2s ease-in-out;
+					}
+				}
+				&.like {
+					color: $dark-primary-color;
+					&:hover {
+						.ic_like {
+							background-image: url('~assets/images/ic_like_hover.svg');
+						}
+					}
+				}
+				&.dislike {
+					color: $dark-primary-color;
+					&:hover {
+						.ic_dislike {
+							background-image: url('~assets/images/ic_dislike_hover.svg');
+						}
+					}
+				}
+			}
 		}
 	}
 
@@ -1723,7 +1766,6 @@ h3 {
 		}
 	}
 
-
 	.tg_banner_wrap {
 		margin: 48px 0 0 0;
 		padding: 12px 0;
@@ -1850,7 +1892,16 @@ h3 {
 				text-align: center;
 			}
 		}
-
+		
+		.sticky_block {
+			.sticky_inner {
+				height: 48px;
+				margin: 0 60px 0 0;
+				.vote {
+					padding: 0 12px;
+				}
+			}
+		}
 
 		.tg_banner_wrap {
 			.tg_banner {
@@ -1896,10 +1947,10 @@ h3 {
 }
 
 
-		.chart-page {
-			background: $bg-main-color !important; 
-			border: 1px solid $border-thin-color !important;
-		}
+.chart-page {
+	background: $bg-main-color !important; 
+	border: 1px solid $border-thin-color !important;
+}
 
 /* coin page */
 .ff_coin {
