--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1353,9 +1353,22 @@ h3 {
 }
 
 /* footer block */
-.ff-footer {
+.ff_footer {
+	display: flex;
 	padding-left: 24px;
 	box-shadow: inset 0 1px 0 0 #BFBFBF;
+
+	.ff_copyright {
+		flex-grow: 0;
+	}
+	.ff_license {
+		flex-grow: 1;
+		text-align: center;
+	}
+	.ff_social {
+		flex-grow: 0;
+	}
+
 	span {
 		line-height: 48px;
 	}
@@ -1366,6 +1379,35 @@ h3 {
 		padding: 0 20px 0 0;
 		&:hover {
 			text-decoration: underline;
+		}
+	}
+}
+@media (max-width: 1040px) {
+	.ff_footer {
+		flex-direction: row;
+		.ff_copyright {
+			display: none;
+		}
+		.ff_license {
+			display: block;
+		}
+		.ff_social {
+			display: none;
+		}
+	}
+}
+@media (max-width: 769px) {
+	.ff_footer {
+		justify-content: center;
+		.ff_copyright {
+			display: none;
+		}
+		.ff_license {
+			display: none;
+		}
+		.ff_social {
+			align-self: center;
+			display: block;
 		}
 	}
 }
