--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1834,6 +1834,15 @@ h3 {
 		}
 	}
 
+	.tt_banner_wrap {
+		display: block;
+		text-align: center;
+		img {
+			width: 75%;
+			margin-top: 36px;
+		}
+	}	
+
 	.tg_banner_wrap {
 		margin: 48px 0 0 0;
 		padding: 12px 0;
