--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1169,6 +1169,14 @@ h3 {
 			}
 		}
 
+		a.coin_details_item { 
+			transition: unset;
+			&:hover {
+				color: $link-color; 
+				text-decoration: underline;
+			}
+		}
+
 		.coin_details_item.change {
 			color: $up-value-color;
 			font-weight: bold;
