--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -1528,6 +1528,13 @@ h3 {
 	padding-left: 24px;
 	box-shadow: inset 0 1px 0 0 #BFBFBF;
 
+	.icon_rss {
+		fill: #ccc;
+		&:hover {
+			fill: #000;
+		}
+	}
+
 	.ff_copyright {
 		flex-grow: 0;
 	}
@@ -2553,9 +2560,6 @@ h3 {
 				width:100%;
 			}
 		}
-		.coin_mobile {
-/*			display: none;
-*/		}
 		.coin_detail_unit {
 			margin: 10px 0;
 			.coin-detail {
