--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -107,6 +107,9 @@ h3 {
 .margin60 {
 	margin-top: 60px !important;
 }
+.padding12 {
+	padding-top: 12px !important;
+}
 .border_top {
 	border-top: 1px solid $border-bold-color;
 }
@@ -476,7 +479,7 @@ h3 {
 	display: none;
 }
 
-.btn-by-coin {
+.button_buy_coin {
 	border: none;
 	background: none;
 	background-color: $up-value-color;
@@ -1661,7 +1664,7 @@ h3 {
 			.btn {
 				flex-grow: 0;
 
-				.btn-by-coin {
+				.button_buy_coin {
 					padding: 0 20px;
 					width: 138px;
 				}
@@ -2240,12 +2243,26 @@ h3 {
 	border: 1px solid $border-thin-color !important;
 }
 
+.tooltip_date {
+	font-size: 14px;
+	font-family: $font-stack;
+	color: $primary-color;
+}
+.tooltip_label {
+	font-size: 12px;
+	font-weight: 100;
+	color: $primary-color;
+}
+.tooltip_value {
+	font-size: 14px;
+	font-family: $font-stack;
+	color: $primary-color;
+}
+
 /* coin page */
 .ff_coin {
 	background-color: $bg-main-color;
 	padding-top: 1px;
-
-
 
 	.coin_page_row {
 		margin: 0 24px;
@@ -2254,7 +2271,6 @@ h3 {
 	.h_link {
 		font-size: $label-size;
 	}
-
 
 	.coin_head_block {
 		padding: 24px 24px 0;
@@ -2313,7 +2329,7 @@ h3 {
 						transition: background-color 0.2s ease-in-out;
 					}
 				}
-				.btn-by-coin {
+				.button_buy_coin {
 					@extend .subscribe;
 					flex-grow: inherit;
 					display: block;
@@ -2403,7 +2419,6 @@ h3 {
 		margin-top: 24px;
 		padding: 12px 24px 16px 24px;
 		border-top: 1px solid $border-bold-color;
-		border-bottom: 1px solid $border-bold-color;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
@@ -2581,18 +2596,52 @@ h3 {
 		border: 1px solid $border-thin-color;
 	}
 
-	.tt_graph_component {
-		width: 100%;
-		height: 300px;
-		display: block;
+	.tt_graph_wrap {
+		margin-top: 24px;
+		position: relative;
+		.tt_graph_head {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			top: 24px;
+			position: absolute;
+			width: 100%;
+			.button_tt_link {
+				@extend .button_class;
+				border: none;
+				background-color: $up-value-color;
+				color: $bg-main-color;
+				text-align: center;
+				line-height: 41px;
+				display: inline-block;
+				flex-grow: 0;
+				&:hover {
+					border: none;
+					background-color: lighten($up-value-color, 3%);
+					transition: background-color 0.2s ease-in-out;
+				}
+			}
+			h2 {
+				margin: 0;
+			}
+		}
+
+		.tt_graph_component {
+			width: 100%;
+			height: 300px;
+			display: block;
+		}
 	}
+
 
 	.index_pane {
 		padding-bottom: 48px;
 	}
 
 	.filters_tab {
+		background-color: $bg-coin-color;
 		&.active_index_pane {
+			background-color: $bg-main-color;
 			color: darken($link-color, 7%);
 			&:hover {
 				color: $link-color;
