--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -2283,11 +2283,12 @@ h3 {
 				white-space: nowrap;
 				.button_icon {
 					width:20px;
-					height: 35px;
-					vertical-align: bottom;
+					height: 23px;
+					vertical-align: top;
 				}
 				h1 {
 					display: inline;
+					line-height: 25px;
 					margin-left: 12px;
 					text-overflow: clip;
 				}
@@ -2414,6 +2415,10 @@ h3 {
 	.coin-info {
 		color: $dark-primary-color;
 		font-size: $coin-info-size;
+		line-height: $coin-info-size + 2px;
+	}
+	.coin_info_wrap {
+		display: flex;
 	}
 	.coin_details_block {
 		margin-top: 24px;
