--- a/assets/css/bind.scss
+++ b/assets/css/bind.scss
@@ -2602,13 +2602,12 @@ h3 {
 	}
 
 	.tt_graph_wrap {
-		margin-top: 24px;
 		position: relative;
 		.tt_graph_head {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			top: 24px;
+			top: 54px;
 			position: absolute;
 			width: 100%;
 			align-items: baseline;
@@ -2636,16 +2635,69 @@ h3 {
 			width: 100%;
 			height: 300px;
 			display: block;
+
 		}
 		&.trading_view_adapt {
 			width: 83%;
 			margin: 24px auto;
+		}
+		.loading {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background-color: $bg-main-color;
+			opacity: 0.6;
 		}
 	}
 
 
 	.index_pane {
 		padding-bottom: 48px;
+	}
+
+	.filters {
+		display: flex;
+		align-items: baseline;
+		justify-content: flex-end;
+		margin: 0 24px 6px;
+		.filter {
+			display: inline-flex;
+			align-items: baseline;
+
+			label {
+				font-size: $label-size;
+				line-height: $label-size;
+				margin: 0 16px 0 8px;
+			}
+			ul {
+				margin: 0;
+				padding: 0;
+				display: flex;
+				li {
+					list-style: none;
+					margin: 0;
+					padding: 0;
+					border: 1px solid $border-thin-color;
+					margin-left: -1px;
+					padding: 3px 6px;
+					font-size: 12px;
+					font-weight: bold;
+					text-transform: uppercase;
+					line-height: 14px;
+					cursor: pointer;
+					transition: all 0.1s ease;
+					&:hover:not(.active_filter) {
+						background-color: $border-thin-color;
+						border-color: $border-thin-color;
+					}
+					&.active_filter {
+						color: $link-color;
+					}
+				}
+			}
+		}
 	}
 
 	.filters_tab {
